src/components/IntroHighlights/styles.css
.intro-showcase {
  text-align: center;
}

.highlights-row {
  margin-bottom: 8rem;
}

.highlights-row,
.highlights-row div {
  display: flex;
  gap: 2rem;
  align-items: center;
  justify-content: center;
  font-weight: 500;
  font-size: 1.08rem;
  text-wrap: balance;
}

.highlights-row div {
  flex-direction: column;
  gap: 1rem;
}

.highlights-row img {
  width: 3rem;
  height: 3rem;
}

@media screen and (max-width: 1000px) {
  .highlights-row {
    flex-direction: column;
    align-items: start;
    text-align: left;
    margin-bottom: 3rem;
    padding: 0 3rem;
  }

  .highlights-row div {
    flex-direction: row;
    justify-content: start;
  }
}

/* bigger image highlights */

.image-highlights {
  font-size: 2rem;
  font-weight: 600;
  display: flex;
  gap: 1rem;
  flex-wrap: wrap;
}

.image-highlights img {
  display: block;
}

.image-highlights .desk-view {
  width: 100%;
}

.image-highlights .tensor-chip {
  width: 45%;
}

.image-highlights .customize {
  /* width: 50%; */
  flex: 1;
}

.image-highlights .highlight {
  position: relative;
  border-radius: var(--radius);
  overflow: hidden;
  text-align: left;
  text-wrap: balance;
}

.image-highlights p {
  position: absolute;
  top: 0rem;
  left: 0rem;
  padding: 2.5rem;
}

@media screen and (max-width: 1000px) {
  .image-highlights {
    font-size: 1.2rem;
  }

  .image-highlights img {
    aspect-ratio: 1 / 1;
    object-fit: cover;
  }

  .image-highlights .tensor-chip {
    width: 100%;
  }

  .image-highlights .customize {
    width: 100%;
  }

  .image-highlights p {
    padding: 1.5rem;
    width: 100%;
    text-align: center;
  }
}

.image-highlights img {
  max-width: 100%;
}

.image-highlights .gemini-highlight p {
  color: #fff;
  width: 100%;
  text-align: center;
  font-weight: 400;
}

/* https://dev.to/afif/border-with-gradient-and-radius-387f */
.image-highlights .gemini-highlight {
  position: relative;
  overflow: visible;
}

.image-highlights .gemini-highlight img {
  border-radius: var(--radius);
}

.image-highlights .cheater-linebreak-styles {
  font-size: 1rem;
}

.image-highlights .gemini-highlight::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: var(--radius);
  padding: 4px;
  background-image: linear-gradient(
    74deg,
    rgb(66, 133, 244) 0px,
    rgb(155, 114, 203) 12%,
    rgb(217, 101, 112) 24%,
    rgb(217, 101, 112) 36%,
    rgb(155, 114, 203) 48%,
    rgb(66, 133, 244) 50%,
    rgb(155, 114, 203) 70%,
    rgb(217, 101, 112) 90%
  );
  pointer-events: none;
  filter: blur(30px);
  z-index: -1;
}

@media screen and (max-width: 1000px) {
  .image-highlights .gemini-highlight img {
    aspect-ratio: initial;
  }
}

